--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/coordinatorLayout"
-    style="@style/MatchMatch.Vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+  >
 
     <android.support.design.widget.AppBarLayout
-        style="@style/MatchWrap"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.v7.widget.Toolbar
@@ -18,19 +20,25 @@
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabLayout"
-            style="@style/MatchWrap"
-            app:tabIndicatorColor="?attr/colorPrimaryDark"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
             app:tabIndicatorHeight="3dp"
             app:tabMode="scrollable"
             app:tabPaddingEnd="10dp"
-            app:tabTextAppearance="@style/TextAppearance.AppCompat.Subhead" />
+            app:tabTextAppearance="@style/TextAppearance.AppCompat.Subhead"
+            app:tabIndicatorColor="@color/color_button"
+
+            app:tabSelectedTextColor="@color/color_button"
+            app:tabTextColor="@color/black2"/>
 
     </android.support.design.widget.AppBarLayout>
 
-    <!-- 加上app:layout_behavior="@string/appbar_scrolling_view_behavior"，使ViewPager不被AppBarLayout遮盖 -->
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
-        style="@style/MatchMatch"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </android.support.design.widget.CoordinatorLayout>
