--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,11 @@
 <resources>
 
-    <!-- 去掉ActionBar，欲练此功，必先自宫 -->
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- 状态栏颜色 -->
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <!-- toolbar（actionbar）背景颜色 -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/black3</item>
+        <item name="colorPrimaryDark">@color/black2</item>
+        <item name="colorAccent">@color/black1</item>
     </style>
-
-    <style name="AppTheme" parent="AppBaseTheme"></style>
 
 </resources>
